--- a/src/app/order/order-items/order-items.component.html
+++ b/src/app/order/order-items/order-items.component.html
@@ -1,8 +1,8 @@
-<div class="col-xs-12" *ngIf="!items">
+<div class="col-xs-12" *ngIf="!items.length">
 <p>Não ha itens no seu carrinho. Que tal começar por <a [routerLink]="['/restaurants']">aqui</a></p>
 </div>
 
-<table class="table table-striped" *ngIf="items">
+<table class="table table-striped" *ngIf="items.length">
     <thead>
     <tr>
       <th class="text-center">Quantidade</th>
@@ -19,12 +19,12 @@
         {{item.quantity}}
         <a (click)="emitIncreaseQty(item)" class="btn btn-sm"><i class="fa fa-plus"></i></a>
       </td>
-      <td class="text-center">{{item.name}}</td>
+      <td >{{item.menuItem.name}}</td>
 
-      <td>{{item.description}}</td>
-      <td class="text-right">{{item.value() | currency: BRL: true}}</td>
+      <td>{{item.menuItem.description}}</td>
+      <td class="text-right">{{item.value() | currency: 'BRL': true}}</td>
       <td class="text-right">
-        <a (click)="remove(item)" class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
+        <a (click)="emitRemove(item)" class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
       </td>
     </tr>
     
