--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,8 +4,7 @@
 
   <section class="content">
     <section class="invoice">
-      {{form.valid}}
-      {{form.value | json}}
+     
           <form #form="ngForm" >
             <div class="row">
               <div class="col-xs-12">
@@ -31,7 +30,7 @@
               </div>
               <div class="col-sm-3 col-xs-6">
                   <mt-input-container  label="Compemento">
-                      <input class="form-control"  name="optional" ngModel  autocomplete="off" placeholder="Complemento">
+                      <input class="form-control"  name="optionalAddress" ngModel  autocomplete="off" placeholder="Complemento">
                     </mt-input-container>
               </div>
               <!-- /.col -->
@@ -47,7 +46,7 @@
 
                 <mt-order-items [items]="cartItems()" 
                 (increaseQty)="increaseQty($event)"
-                (increaseQty)="decreaseQty($event)"
+                (decreaseQty)="decreaseQty($event)"
                 (remove)="remove($event)"></mt-order-items>
               </div>
               <!-- /.col -->
@@ -59,29 +58,15 @@
               <div class="col-sm-6 col-xs-12">
                 <p class="lead">Formas de Pagamento:</p>
 
-                    <mt-radio [options]="paymentOptions" name="paymentOpition" ngModel></mt-radio>
+                    <mt-radio required [options]="paymentOptions" name="paymentOpition" ngModel></mt-radio>
                   
               </div>
               <!-- /.col -->
               <div class="col-sm-6 col-xs-12">
                 <p class="lead">Frete e Total:</p>
 
-                <div class="table-responsive">
-                  <table class="table">
-                    <tbody><tr>
-                      <th style="width:50%">Itens:</th>
-                      <td class="text-right">R$ 20,00</td>
-                    </tr>
-                    <tr>
-                      <th>Frete:</th>
-                      <td class="text-right">R$ 8,00</td>
-                    </tr>
-                    <tr>
-                      <th>Total:</th>
-                      <td class="text-right">R$ 28,00</td>
-                    </tr>
-                  </tbody></table>
-                </div>
+                <mt-delivery-costs [delivery]="delivery" 
+                [itemsValue]="itemsValue()"></mt-delivery-costs>
               </div>
               <!-- /.col -->
             </div>
@@ -90,7 +75,7 @@
 
           <div class="row">
             <div class="col-xs-12">
-              <button href="order-summary.html"  class="btn btn-success pull-right"  [disabled]="!form.valid"><i class="fa fa-credit-card"></i> Concluir Pedido
+              <button (click)="checkOrder(form.value)"   class="btn btn-success pull-right"  [disabled]="!form.valid || cartItems().length === 0"><i class="fa fa-credit-card"></i> Concluir Pedido
               </button>
             </div>
           </div>
