--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -2,7 +2,17 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
+    <a class="search-link pull-right" (click)='toggleSearch()'><i class="fa fa-search"></i></a>
   </h1>
+  <div class="row">
+    <div class="col-xs-12 searchBar" [@toggleSearch]="searchBarState">
+      <form [formGroup]="searchForm">
+        <div class="form-group">
+          <input formControlName="searchControl" type="text" class="form-control" placeholder="busca">
+        </div>
+      </form>
+    </div>
+  </div>
 </section>
 
 
