--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,29 +1,30 @@
 <!-- INíCIO do CONTEÚDO -->
 <section class="content-header">
-  <h1>
-    Todos os Restaurantes
-    <a class="search-link pull-right" (click)='toggleSearch()'><i class="fa fa-search"></i></a>
-  </h1>
-  <div class="row">
-    <div class="col-xs-12 searchBar" [@toggleSearch]="searchBarState">
-      <form [formGroup]="searchForm">
-        <div class="form-group">
-          <input formControlName="searchControl" type="text" class="form-control" placeholder="busca">
+    <h1>
+        Todos os Restaurantes
+        <a class="search-link pull-right" (click)='toggleSearch()'><span *ngIf="iptSearch.value"> {{iptSearch.value}}</span><i class="fa fa-search"></i></a>
+    </h1>
+    <div class="row">
+        <div class="col-xs-12 searchBar" [@toggleSearch]="searchBarState">
+            <form [formGroup]="searchForm">
+                <div class="form-group">
+                    <input #iptSearch formControlName="searchControl" type="text" class="form-control" placeholder="busca">
+                </div>
+            </form>
         </div>
-      </form>
     </div>
-  </div>
 </section>
-
 
 <section class="content">
 
-  <div class="row">
-          <div *ngFor="let restaurant of restaurants" class="col-sm-6 col-xs-12">
+    <div class="row">
+        <div *ngFor="let restaurant of restaurants" class="col-sm-6 col-xs-12">
             <mt-restaurant [restaurant]="restaurant"></mt-restaurant>
-          </div>
-    
         </div>
+        <div *ngIf="restaurants?.length === 0" col-xs-12>
+            <p class="lead text-center">Nao foram encontrados items para a sua busca</p>
+        </div>
+    </div>
 
 </section>
 
